--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "solidity-coverage": "0.5.11",
     "truffle": "5.0.7",
     "truffle-flattener": "1.3.0",
-    "web3": "1.0.0-beta.55"
+    "web3": "1.0.0-beta.55",
+    "openzeppelin-solidity": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
